motor code hope it is working and else i jump from the flat doei.

--- a/controller-input-receiver/platformio.ini
+++ b/controller-input-receiver/platformio.ini
@@ -8,8 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+debug_init_break = tbreak setup
+
 [env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-monitor_speed = 9600
