--- a/controller-input-receiver/platformio.ini
+++ b/controller-input-receiver/platformio.ini
@@ -18,3 +18,5 @@ debug_init_break = tbreak setup
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+lib_deps=
+    https://github.com/zcshiner/Dynamixel_Serial.git
