--- a/controller-input-receiver/CMakeLists.txt
+++ b/controller-input-receiver/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_SYSTEM_NAME Generic)
 set(CMAKE_C_COMPILER_WORKS 1)
 set(CMAKE_CXX_COMPILER_WORKS 1)
 
-project("controller-input-receiver" C CXX)
+project("RobotCode" C CXX)
 
 include(CMakeListsPrivate.txt)
 
